# WatchCat

./: .gitignore  README.md  Requirements_and_Specifications.md  send_mail.py  описание.MD
WatchCat/: CMakeLists.txt  face_detection.cpp  face_detection.h  main.cpp  main.h  oscillogram.cpp  oscillogram.h  soundrecorder.cpp  soundrecorder.h  str_utils.cpp  str_utils.h  wave_in.cpp
docs/: GUI_prototyping.MD  Requirements_and_Specifications.md
