cmake_minimum_required(VERSION 3.13)

project(WatchCat)
set( CMAKE_VERBOSE_MAKEFILE on )
SET(PLATFORM_SPECIFIC_LIBS "-lpthread")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
find_package( OpenCV REQUIRED )
set(CMAKE_BUILD_TYPE Release)
#include_directories(${DIR}/headers /usr/include)
#link_directories (${DIR}/src/utils /opt/local/lib)
set(HEADER_FILES main.h str_utils.h)
set(SOURCE_FILES main.cpp str_utils.cpp)
add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES})
add_definitions(-DUSE_AVX_INSTRUCTIONS=1)

#TARGET_LINK_LIBRARIES(WatchCat opencv_core opencv_imgproc opencv_video)
target_link_libraries( WatchCat ${OpenCV_LIBS} )
