cmake_minimum_required(VERSION 3.13)

project(WatchCat)
set( CMAKE_VERBOSE_MAKEFILE on )
#set( CMAKE_CXX_COMPILER /usr/bin/clang++-7)
SET(PLATFORM_SPECIFIC_LIBS "-lpthread")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -fPIC")
find_package( OpenCV REQUIRED )
set(CMAKE_BUILD_TYPE Release)
set(KFR_DIR ./kfr)
#include_directories(${DIR}/headers /usr/include)
#link_directories (${DIR}/src/utils /opt/local/lib)
set(HEADER_FILES main.h str_utils.h soundrecorder.h wave_in.h oscillogram.h)
set(SOURCE_FILES soundrecorder.cpp main.cpp str_utils.cpp wave_in.cpp oscillogram.cpp)
add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES})
add_definitions(-DUSE_AVX_INSTRUCTIONS=1)
#include_directories("~/src/kfr/include")
add_subdirectory(${KFR_DIR})
link_directories (${KFR_DIR}/build/)
#TARGET_LINK_LIBRARIES(WatchCat opencv_core opencv_imgproc opencv_video)
# Include KFR subdirectory
#target_link_libraries( WatchCat ${OpenCV_LIBS} /home/vova/src/kfr/build/libkfr_io.a  /home/vova/src/kfr/build/libkfr_dft.a )
target_compile_definitions(WatchCat PRIVATE -DHAVE_DFT)
target_link_libraries(WatchCat ${OpenCV_LIBS} kfr kfr_dft use_arch)
find_package(ALSA REQUIRED)
if (ALSA_FOUND)
    include_directories(${ALSA_INCLUDE_DIRS})
    target_link_libraries (WatchCat ${ALSA_LIBRARIES})
endif(ALSA_FOUND)

#target_link_libraries(WatchCat PUBLIC "kfr")
#target_link_libraries(WatchCat kfr use_arch)


